tests/baselines/reference/project/nestedLocalModuleSimpleCase/node/nestedLocalModuleSimpleCase.errors.txt
test1.ts(2,2): error TS1147: Import declarations in an internal module cannot reference an external module.


==== test1.ts (1 errors) ====
    export module myModule {
     import foo = require("test2");
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1147: Import declarations in an internal module cannot reference an external module.
     //console.log(foo.$);
    }
    
    
    